--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="poster">
             <i class="far fa-film"></i>
-            <p>See no special offer restrictions</p>
+            <p>See no special offer rest45656rictions</p>
         </div>
 
         <div class="menu">
